Fix: Return programs to chronological order when moving from timetable to list on mobile

--- a/css/schedule.css
+++ b/css/schedule.css
@@ -375,7 +375,7 @@ summary::marker {
 	--kompassi-program-list-padding: 0.3em;
 	--kompassi-program-list-visual-width: 12px;
 
-	/* display: grid; */
+	display: grid;
 	grid-template-columns: repeat(1,1fr);
 	grid-gap: var(--kompassi-padding);
 }
@@ -386,7 +386,6 @@ summary::marker {
 		background-color: var(--kompassi-bg);
 		box-shadow: var(--kompassi-box-shadow);
 		border-radius: var(--kompassi-radius);
-		margin-bottom: var(--kompassi-padding);
 	}
 		#kompassi_schedule[data-display="list"] article::before {
 			content: '';
